# Codes

./: .gitignore  README.md
how_to/miscs/machine_zero/: README.md  fortran.f90  python.py
how_to/use_fftw3/: CMakeLists.txt  README.md  dummy.f90  test_1d_guru.f90  test_1d_r2r.f90  test_3d_r2c.f90
how_to/use_fftw3/run/: test_3d_r2c.txt
how_to/use_fortran_oop/: m_shapes.f90
